--- a/styles/style.scss
+++ b/styles/style.scss
@@ -874,7 +874,7 @@ box-shadow: 0px 0px 48px 0px rgba(112,255,0,1);
 
 .left .box_left{
    width: 50%;
-   background-color: #374151;
+   background-color: rgb(22, 22, 22);
    border-radius: 15px 0 0 15px;
    padding: 45px;
    display: flex;
@@ -882,7 +882,7 @@ box-shadow: 0px 0px 48px 0px rgba(112,255,0,1);
 }
 .left .box_right{
    width: 50%;
-   background-color: #1F2937;
+   background-color: #212529;
    border-radius: 0 15px 15px 0;
    padding: 45px;
 }
@@ -907,7 +907,7 @@ box-shadow: 0px 0px 48px 0px rgba(112,255,0,1);
 }
 
 .project_title{
-   color: #F9FAFB;
+   color: chartreuse;
    font-size: 20px;
    line-height: 28px;
    font-weight: 500;
@@ -927,7 +927,7 @@ box-shadow: 0px 0px 48px 0px rgba(112,255,0,1);
    margin-bottom: 25px;
 }
 .tag{
-   background-color: #374151;
+   background-color: rgb(121, 121, 121);
    color: #D1D5DB;
    font-size: 14px;
    line-height: 20px;
